# IRAnatomy

./: Cargo.toml  Dockerfile  README.md  flake.nix
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  LLVM_CONCEPTS.md
src/: app.rs  components.rs  highlight.rs  lib.rs  main.rs  server_functions.rs
style/: main.css
